Fixed errors and redesigned ui

--- a/CSS_Task_5.html
+++ b/CSS_Task_5.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 5</title>
+    <title>CSS TASK 5</title>
     <link rel="stylesheet" href="Task5_styles.css">
 
 </head>
 <body>
 
 <ul class="navbar">
-    <li><a href="https://www.google.com">Home page</a>
-    <li><a href="https://www.google.com">Musings</a>
-    <li><a href="https://www.google.com">My town</a>
-    <li><a href="https://www.google.com">Links</a>
+    <li><a href="Home_page.html" target="_blank">Home page</a>
+    <li><a href="Musings.html" target="_blank">Musings</a>
+    <li><a href="My_Town.html" target="_blank">My town</a>
+    <li><a href="Links.html" target="_blank">Links</a>
   </ul>
   
   <h1>My first styled page</h1>
