--- a/index.html
+++ b/index.html
@@ -3,99 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasks index</title>
-
-    <style>
-        table, td, tr, th{
-            border: 1px solid black;
-            border-collapse: collapse;
-            width: 250px;
-            text-align: center;
-        }
-
-        table{
-            margin-right: auto;
-            margin-left: auto;
-        }
-
-        h1{
-            text-align: center;
-        }
-    </style>
+    <title>HTML TASKS</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <h2><u>HTML Tasks</u></h2>
+    <table class="ht">
+        <thead>
 
-    <h1>HTML Tasks</h1>
-
-    <table>
-        <tr>
+          <tr>
             <th>Task Name</th>
             <th>Task Link</th>
-        </tr>
+          </tr>
 
-        <tr>
+        </thead>
+
+        <tbody>
+          <tr class = "hr">
             <td>Task 1</td>
             <td> <a href="Task_1.html" target="_blank">Task 1</a></td>
         </tr>
 
-        <tr>
+        <tr class = "hr">
             <td>Task 2</td>
             <td> <a href="Task_2.html" target="_blank">Task 2</a></td>
         </tr>
 
-        <tr>
+        <tr class = "hr">
             <td>Task 3</td>
             <td> <a href="Task_3.html" target="_blank">Task 3</a></td>
         </tr>
 
-        <tr>
+        <tr class = "hr">
             <td>Task 4</td>
             <td> <a href="Task_4.html" target="_blank">Task 4</a></td>
         </tr>
 
-        <tr>
+        <tr class = "hr">
             <td>Task 5</td>
             <td> <a href="Task_5.html" target="_blank">Task 5</a></td>
         </tr>
+      </tbody>
+      </table>
 
-    </table>
-
-
-
-
-    <h1>CSS Tasks</h1>
+    <h2><u>CSS Tasks</u></h2>
     
-    <table>
+    <table class="ct">
+      <thead>
+
         <tr>
             <th>Task Name</th>
             <th>Task Link</th>
         </tr>
 
-        <tr>
+      </thead>
+
+      <tbody>
+
+        <tr class="cr">
             <td>Task 1</td>
             <td> <a href="CSS_Task_1.html" target="_blank">Task 1</a></td>
         </tr>
 
-        <tr>
+        <tr class="cr">
             <td>Task 2</td>
             <td> <a href="CSS_Task_2.html" target="_blank">Task 2</a></td>
         </tr>
 
-        <tr>
+        <tr class="cr">
             <td>Task 3</td>
             <td> <a href="CSS_Task_3.html" target="_blank">Task 3</a></td>
         </tr>
 
-        <tr>
+        <tr class="cr">
             <td>Task 4</td>
             <td> <a href="CSS_Task_4.html" target="_blank">Task 4</a></td>
         </tr>
 
-        <tr>
+        <tr class="cr">
             <td>Task 5</td>
             <td> <a href="CSS_Task_5.html" target="_blank">Task 5</a></td>
         </tr>
 
+      </tbody>
     </table>
+
+    <footer><label>Crafted with &hearts; by Aswin P Kumar</label></footer>
 </body>
 </html>
