--- a/CSS_Task_1.html
+++ b/CSS_Task_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1</title>
+    <title>CSS TASK 1</title>
         <style>
             
             
@@ -17,6 +17,11 @@
                 border-radius: 78px / 78px;
                 border: 1px solid black;
                 background-color: rgb(215, 70, 70);            }
+
+            h3{
+                text-align: center;
+            }
+
         </style>
 
     </head>
@@ -25,9 +30,7 @@
 
         <h3>Task 1: Table Redesign using CSS</h3>
 
-
-
-        <table style="width:75%">
+        <table align="center" style="width:60%">
             <tr>
                 <th>Firstname</th>
                 <th>Lastname</th>
