--- a/CSS_Task_2.html
+++ b/CSS_Task_2.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 2</title>
+    <title>CSS TASK 2</title>
 
     <style>
+
+      div{
+       margin: 0 auto;
+      }
+
+      h3{
+        text-align: center;
+      }
 
         ul.a {
   list-style-type: none;
@@ -66,7 +74,7 @@ li.b:hover:not(.active) {
 </head>
 <body>
 
-    <h3>Task 2a: Horizontal Navigation Bar</h3>
+    <h3>Task 2a: Vertical Navigation Bar</h3>
 <div style="border: solid black; border-width: thin; width:fit-content ; padding: 10px;">
     <ul class="a">
         <li class="a">Home</li>
@@ -77,12 +85,12 @@ li.b:hover:not(.active) {
       </ul>
     </div>
     <br>
-    <hr color="black">
+    <hr>
     <br>
 
 
 
-    <h3>Task 2b: Vertical Navigation Bar</h3>
+    <h3>Task 2b: Horizontal Navigation Bar</h3>
 <div style="border: solid black; border-width: thin; width:fit-content ; padding: 10px;">
     <ul class="b">
         <li class="b">Home</labek></li>
