--- a/CSS_Task_3.html
+++ b/CSS_Task_3.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CSS TASK 3</title>
 <style>
 table {
   border-collapse: collapse;
@@ -23,13 +26,17 @@ th {
   background-color: #04AA6D;
   color: white;
 }
+
+h3{
+  text-align: center;
+}
 </style>
 </head>
 <body>
 
 <h3>Task 3: Table redesign using CSS</h3>
 
-<table>
+<table align="center">
   <tr>
     <th>Company</th>
     <th>Contact</th>
