--- a/CSS_Task_4.html
+++ b/CSS_Task_4.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS TASK 4</title>
+    <style>
  a {
   position: absolute;
   left: -90px;
