Fixed Errors and updated tasks

--- a/CSS_Task_2.html
+++ b/CSS_Task_2.html
@@ -74,7 +74,7 @@ li.b:hover:not(.active) {
 </head>
 <body>
 
-    <h3>Task 2a: Vertical Navigation Bar</h3>
+    <h3><u>Task 2a: Vertical Navigation Bar</u></h3>
 <div style="border: solid black; border-width: thin; width:fit-content ; padding: 10px;">
     <ul class="a">
         <li class="a">Home</li>
@@ -90,7 +90,7 @@ li.b:hover:not(.active) {
 
 
 
-    <h3>Task 2b: Horizontal Navigation Bar</h3>
+    <h3><u>Task 2b: Horizontal Navigation Bar</u></h3>
 <div style="border: solid black; border-width: thin; width:fit-content ; padding: 10px;">
     <ul class="b">
         <li class="b">Home</labek></li>
