--- a/Task_2.html
+++ b/Task_2.html
@@ -18,7 +18,7 @@
     </style>
     <body>
 
-      <h3>Task 2: Nested List</h3>
+      <h3><u>Task 2: Nested List</u></h3>
 
       <div style="border: solid black; border-width: thin; width:fit-content ; padding: 10px;">
 
