--- a/Task_3.html
+++ b/Task_3.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <h3>TASK 3: Hyperlinks</h3>
+    <h3><u>TASK 3: Hyperlinks</u></h3>
 
     <div style="border: solid black; border-width: thin; width: fit-content; background-color: rgb(228, 227, 227);">
 
