--- a/CSS_Task_1.html
+++ b/CSS_Task_1.html
@@ -28,7 +28,7 @@
     <body>
 
 
-        <h3>Task 1: Table Redesign using CSS</h3>
+        <h3><u>Task 1: Table Redesign using CSS</u></h3>
 
         <table align="center" style="width:60%">
             <tr>
