--- a/CSS_Task_3.html
+++ b/CSS_Task_3.html
@@ -11,7 +11,6 @@ table {
 }
 
 table td, th {
-
   padding: 8px;
 }
 
@@ -34,7 +33,7 @@ h3{
 </head>
 <body>
 
-<h3>Task 3: Table redesign using CSS</h3>
+<h3><u>Task 3: Table redesign using CSS</u></h3>
 
 <table align="center">
   <tr>
