--- a/CSS_Task_1.html
+++ b/CSS_Task_1.html
@@ -22,6 +22,23 @@
                 text-align: center;
             }
 
+            .grid{
+                display: grid;
+                grid-template-columns: repeat(3, 123px);
+                padding: 10px;
+                margin-left: 550px;          
+            }
+            
+            .shape{
+                height: 10px;
+                width: 40px;
+                border: 3px solid black;
+                margin: 10px;
+                padding: 30px;
+                border-color: rgb(116, 204, 54);
+
+            }
+
         </style>
 
     </head>
@@ -56,6 +73,21 @@
             </tr>
         
         </table>
+
+
+        <br>
+        <div class="grid">
+            <div class="shape" style="border-radius: 5px;"></div>
+            <div class="shape" style="border-radius: 10px;"></div>
+            <div class="shape" style="border-radius: 25px;"></div>
+
+            <div class="shape" style="border-radius: 10px;"></div>
+            <div class="shape" style="border-radius: 5px;"></div>
+            <div class="shape" style="border-radius: 25px;"></div>
+
+            <div class="shape" style="border-radius: 60%;"></div>
+            <div class="shape" style="border-radius: 5px;"></div>
+            <div class="shape" style="border-radius: 2px 35px;"></div>
 
 </body>
 </html>
