--- a/Task_3.html
+++ b/Task_3.html
@@ -37,10 +37,10 @@
             <p>Click any of the following links</p>
 
             <div style="display: flex; list-style: none;">
-                <li class="l1" ><a href="https://www.google.com/" target="_blank">Opens in New</a></li>
-                <li class="l1" ><a href="https://www.google.com/" target="_self">Opens in Self</a></li>
-                <li class="l1" ><a href="https://www.google.com/" target="_self">Opens in Parent</a></li>
-                <li class="l1" ><a href="https://www.google.com/" target="_top">Opens in Body</a></li>
+                <li class="l1" ><a href="trial.html" target="_blank">Opens in New</a></li>
+                <li class="l1" ><a href="trial.html" target="_self">Opens in Self</a></li>
+                <li class="l1" ><a href="trial.html" target="_self">Opens in Parent</a></li>
+                <li class="l1" ><a href="trial.html" target="_top">Opens in Body</a></li>
                 <li style="margin-right: 50px;"> <a href="mailto:aswinpkumar03@gmail.com">Send email</a></li>
             </div>   
         </ul>
