updated all css tasks

--- a/CSS_Task_2.html
+++ b/CSS_Task_2.html
@@ -7,15 +7,16 @@
 
     <style>
 
-      div{
-       margin: 0 auto;
-      }
+div{
+  margin: 0 auto;
+}
 
-      h3{
-        text-align: center;
-      }
+h3{
+  text-align: center;
+  margin: 40px 0 20px;
+}
 
-        ul.a {
+ul.a {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -29,7 +30,7 @@ li.a {
   display: block;
   color: blue;
   padding: 8px 16px;
-
+  
 }
 
 li.a:hover {
