--- a/CSS_Task_3.html
+++ b/CSS_Task_3.html
@@ -26,9 +26,13 @@ th {
   color: white;
 }
 
+
 h3{
-  text-align: center;
-}
+    text-align: center;
+    margin: 40px 0 40px;
+  }
+
+
 </style>
 </head>
 <body>
