--- a/My_Town.html
+++ b/My_Town.html
@@ -6,15 +6,22 @@
     <title>My Town Page</title>
 </head>
 <style>
-    h1{
-        text-align: center;
-    }
-    body{
-        background-color: rgb(49, 58, 222);
-    }
+
+html{
+    background-color: #00DBDE;
+    background-image: linear-gradient(90deg, #00DBDE 0%, #0026ff 100%);
+    height: 100%;
+    width: 100%;
+}
+
+
+h1{
+    text-align: center;
+}
+   
 </style>
 <body>
-    <h1>This is my town</h1>
+    <h1><u>This is my town page</u></h1>
 
 </body>
 </html>
