--- a/Task_1.html
+++ b/Task_1.html
@@ -19,10 +19,12 @@
             margin-left: auto;
             }
             
+          
             h3{
                 text-align: center;
-            }
+                margin: 40px 0 40px;
 
+            }
         </style>
 
     </head>
