--- a/Task_3.html
+++ b/Task_3.html
@@ -13,8 +13,9 @@
         }
     
         h3{
-            text-align: center;
-        }
+                text-align: center;
+                margin: 40px 0 40px;
+            }
 
         .l1::after{
             content: " | ";
