--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
             <td> <a href="CSS_Task_5.html" target="_blank">Task 5</a></td>
         </tr>
 
+        <tr class="cr">
+          <td>Task 6</td>
+          <td> <a href="CSS_Task_6.html" target="_blank">Task 6</a></td>
+      </tr>
+
+      <tr class="cr">
+        <td>Task 7</td>
+        <td> <a href="CSS_Task_7.html" target="_blank">Task 7</a></td>
+    </tr>
+
       </tbody>
     </table>
 
