--- a/CSS_Task_1.html
+++ b/CSS_Task_1.html
@@ -11,6 +11,7 @@
                 border-radius: 15px;
                 border: 1px solid black;
                 background-color: rgb(114, 33, 180);
+            
             }
 
             th, td {
@@ -20,6 +21,7 @@
 
             h3{
                 text-align: center;
+                margin: 40px 0 40px;
             }
 
             .grid{
@@ -35,7 +37,7 @@
                 border: 3px solid black;
                 margin: 10px;
                 padding: 30px;
-                border-color: rgb(116, 204, 54);
+                border-color: rgb(82, 13, 137);
 
             }
 
