--- a/CSS_Task_6.html
+++ b/CSS_Task_6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>CSS TASK 6</title>
 
     <style>
 
@@ -76,11 +76,7 @@ button {
         margin-top: 50px;
         
     }
-
-
     </style>
-
-
 </head>
 <body>
 
