--- a/Home_page.html
+++ b/Home_page.html
@@ -6,14 +6,20 @@
     <title>Home Page</title>
 </head>
 <style>
-    h1{
-        text-align: center;
-    }
-    body{
-        background-color: rgb(144, 49, 222);
-    }
+
+html{
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #8a25c4 46%, #ff6363 100%);
+    height: 100%;
+    width: 100%;
+}
+
+h1{
+    text-align: center;
+}
+    
 </style>
 <body>
-    <h1>This is Home Page</h1>
+    <h1><u>This is Home Page</u></h1>
 </body>
 </html>
