--- a/Links.html
+++ b/Links.html
@@ -6,22 +6,37 @@
     <title>Links Page</title>
 </head>
 <style>
+
+    html{
+        background-color: #ff0000;
+        background-image: linear-gradient(180deg, #ff0000 0%, #ef8120 50%, #c2ce19 100%);
+        height: 100%;
+        width: 100%;
+   }
+
     h1{
+        margin: 25px 0 15px;
         text-align: center;
     }
-    body{
-        background-color: rgb(222, 49, 49);
+
+    h2{
+        margin-top: 25px;
+    }
+
+    li{
+        font-size: large;
     }
 </style>
 <body>
-    <h1>Some Required Links</h1>
+    <h1><u>Links Page</u></h1>
 
+
+    <h2>Some Required Links:</h2>
     <ul>
-        <li><a href="https://www.google.com" target="_blank">Link 1</a></li>
-        <li><a href="https://www.google.com" target="_blank">Link 2</a></li>
-        <li><a href="https://www.google.com" target="_blank">Link 3</a></li>
-        <li><a href="https://www.google.com" target="_blank">Link 4</a></li>
-
+        <li><a href="trial.html" target="_blank">Link 1</a></li>
+        <li><a href="trial.html" target="_blank">Link 2</a></li>
+        <li><a href="trial.html" target="_blank">Link 3</a></li>
+        <li><a href="trial.html" target="_blank">Link 4</a></li>
     </ul>
 
 </body>
