--- a/Musings.html
+++ b/Musings.html
@@ -6,14 +6,20 @@
     <title>Musings Page</title>
 </head>
 <style>
+
+    html{
+        background-color: #85FFBD;
+        background-image: linear-gradient(45deg, #85FFBD 28%, #FFFB7D 100%);
+        height: 100%;
+        width: 100%;
+        }
+
     h1{
         text-align: center;
     }
-    body{
-        background-color: rgb(49, 222, 87);
-    }
+    
 </style>
 <body>
-    <h1>Musings Page</h1>
+    <h1><u>Musings Page</u></h1>
 </body>
 </html>
