--- a/Task_2.html
+++ b/Task_2.html
@@ -13,8 +13,9 @@
             
             h3{
                 text-align: center;
+                margin: 40px 0 40px;
             }
-
+            
     </style>
     <body>
 
