--- a/CSS_Task_5.html
+++ b/CSS_Task_5.html
@@ -10,10 +10,10 @@
 <body>
 
 <ul class="navbar">
-    <li><a href="Home_page.html" target="_blank">Home page</a>
-    <li><a href="Musings.html" target="_blank">Musings</a>
-    <li><a href="My_Town.html" target="_blank">My town</a>
-    <li><a href="Links.html" target="_blank">Links</a>
+    <li><a href="extras/Home_page.html" target="_blank">Home page</a>
+    <li><a href="extras/Musings.html" target="_blank">Musings</a>
+    <li><a href="extras/My_Town.html" target="_blank">My town</a>
+    <li><a href="extras/Links.html" target="_blank">Links</a>
   </ul>
   
   <h1>My first styled page</h1>
