--- a/CSS_Task_6.html
+++ b/CSS_Task_6.html
@@ -85,7 +85,7 @@ button {
     <div class="main">
         <form>
             <div style="text-align: center;">
-                <img class="img" src="extras/login.png" alt="login pic">
+                <img class="img" src="assets/login.png" alt="login pic">
             </div>
 
             <div class="form">
