organised into directories

--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
         <tbody>
           <tr class = "hr">
             <td>Task 1</td>
-            <td> <a href="Task_1.html" target="_blank">Task 1</a></td>
+            <td> <a href="HTML-Tasks/Task_1.html" target="_blank">Task 1</a></td>
         </tr>
 
         <tr class = "hr">
             <td>Task 2</td>
-            <td> <a href="Task_2.html" target="_blank">Task 2</a></td>
+            <td> <a href="HTML-Tasks/Task_2.html" target="_blank">Task 2</a></td>
         </tr>
 
         <tr class = "hr">
             <td>Task 3</td>
-            <td> <a href="Task_3.html" target="_blank">Task 3</a></td>
+            <td> <a href="HTML-Tasks/Task_3.html" target="_blank">Task 3</a></td>
         </tr>
 
         <tr class = "hr">
             <td>Task 4</td>
-            <td> <a href="Task_4.html" target="_blank">Task 4</a></td>
+            <td> <a href="HTML-Tasks/Task_4.html" target="_blank">Task 4</a></td>
         </tr>
 
         <tr class = "hr">
             <td>Task 5</td>
-            <td> <a href="Task_5.html" target="_blank">Task 5</a></td>
+            <td> <a href="HTML-Tasks/Task_5.html" target="_blank">Task 5</a></td>
         </tr>
       </tbody>
       </table>
@@ -62,39 +62,62 @@
 
         <tr class="cr">
             <td>Task 1</td>
-            <td> <a href="CSS_Task_1.html" target="_blank">Task 1</a></td>
+            <td> <a href="CSS-Tasks/Task_1.html" target="_blank">Task 1</a></td>
         </tr>
 
         <tr class="cr">
             <td>Task 2</td>
-            <td> <a href="CSS_Task_2.html" target="_blank">Task 2</a></td>
+            <td> <a href="CSS-Tasks/Task_2.html" target="_blank">Task 2</a></td>
         </tr>
 
         <tr class="cr">
             <td>Task 3</td>
-            <td> <a href="CSS_Task_3.html" target="_blank">Task 3</a></td>
+            <td> <a href="CSS-Tasks/Task_3.html" target="_blank">Task 3</a></td>
         </tr>
 
         <tr class="cr">
             <td>Task 4</td>
-            <td> <a href="CSS_Task_4.html" target="_blank">Task 4</a></td>
+            <td> <a href="CSS-Tasks/Task_4.html" target="_blank">Task 4</a></td>
         </tr>
 
         <tr class="cr">
             <td>Task 5</td>
-            <td> <a href="CSS_Task_5.html" target="_blank">Task 5</a></td>
+            <td> <a href="CSS-Tasks/Task_5.html" target="_blank">Task 5</a></td>
         </tr>
 
         <tr class="cr">
           <td>Task 6</td>
-          <td> <a href="CSS_Task_6.html" target="_blank">Task 6</a></td>
+          <td> <a href="CSS-Tasks/Task_6.html" target="_blank">Task 6</a></td>
       </tr>
 
       <tr class="cr">
         <td>Task 7</td>
-        <td> <a href="CSS_Task_7.html" target="_blank">Task 7</a></td>
+        <td> <a href="CSS-Tasks/Task_7.html" target="_blank">Task 7</a></td>
     </tr>
 
+      </tbody>
+    </table>
+
+    <h2><u>Bootstrap Tasks</u></h2>
+
+    <table class="bst">
+      <thead>
+
+        <tr>
+            <th>Task Name</th>
+            <th>Task Link</th>
+        </tr>
+
+      </thead>
+
+      <tbody>
+
+        <tr class="bsr">
+            <td>Task 1</td>
+            <td> <a href="#">Task 1</a></td>
+        </tr>
+
+        
       </tbody>
     </table>
 
